# rail_pz_service

./: .gitignore  Makefile  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml  publish-to-pypi.yml  testing-and-coverage.yml
client/: Makefile  pyproject.toml
client/src/rail_pz_service/client/: algorithm.py  catalog_tag.py  client.py  dataset.py  estimator.py  load.py  model.py  object_ref.py  request.py  wrappers.py
client/src/rail_pz_service/client/cli/: algorithm.py  catalog_tag.py  client_options.py  dataset.py  estimator.py  load.py  main.py  model.py  object_ref.py  request.py  wrappers.py
common/: Makefile  pyproject.toml
common/src/rail_pz_service/common/: __init__.py  common_options.py  config.py  enums.py  errors.py
common/src/rail_pz_service/common/models/: __init__.py  algorithm.py  catalog_tag.py  dataset.py  estimator.py  load.py  model.py  object_ref.py  request.py
db/: Makefile  docker-compose.yaml  pyproject.toml
db/alembic/: env.py
db/docker/: Dockerfile
db/src/rail_pz_service/cli/admin/: admin.py  admin_options.py  algorithm.py  catalog_tag.py  dataset.py  estimator.py  load.py  model.py  object_ref.py  request.py  wrappers.py
db/src/rail_pz_service/db/: __init__.py  algorithm.py  base.py  cache.py  catalog_tag.py  dataset.py  estimator.py  model.py  object_ref.py  request.py  row.py
db/src/rail_pz_service/db/cli/: algorithm.py  catalog_tag.py  dataset.py  estimator.py  load.py  wrappers.py
docs/: conf.py  index.rst
docs/source/: concepts.rst  contributing.rst  creating_a_request.rst  overview.rst  pz_rail_service_admin_cli.rst  pz_rail_service_client_cli.rst  running_a_request.rst  uploading_a_dataset.rst  uploading_a_model.rst  uploading_an_estimator.rst
script/: README.md
server/: Makefile  pyproject.toml
server/src/rail_pz_service/server/: __init__.py  main.py
server/src/rail_pz_service/server/routers/: algorithm.py  catalog_tag.py  dataset.py  estimator.py  healthz.py  index.py  load.py  model.py  object_ref.py  request.py  wrappers.py
src/rail/cli/rail_pz_admin/: admin.py  admin_options.py  algorithm.py  catalog_tag.py  dataset.py  estimator.py  model.py  object_ref.py  request.py  wrappers.py
src/rail/pz_service/: config.py  enums.py  errors.py
src/rail/pz_service/db/: __init__.py  algorithm.py  base.py  cache.py  catalog_tag.py  dataset.py  estimator.py  model.py  object_ref.py  request.py  row.py
src/rail/pz_service/models/: algorithm.py  catalog_tag.py  estimator.py  model.py  object_ref.py  request.py
src/rail_pz_service/: __init__.py  config.py
src/rail_pz_service/client/: __init__.py  algorithm.py  catalog_tag.py  client.py  dataset.py  estimator.py  load.py  model.py  object_ref.py  request.py  wrappers.py
src/rail_pz_service/client/cli/: __init__.py  catalog_tag.py  dataset.py  estimator.py  main.py  object_ref.py  wrappers.py
src/rail_pz_service/common/: common_options.py  test_files.py
src/rail_pz_service/db/: __init__.py  algorithm.py  cache.py  catalog_tag.py  dataset.py  estimator.py  model.py  object_ref.py  request.py  row.py
src/rail_pz_service/db/cli/: admin.py  algorithm.py  catalog_tag.py  dataset.py  estimator.py  load.py  model.py  object_ref.py  request.py  wrappers.py
src/rail_pz_service/models/: __init__.py  trees.py
src/rail_pz_service/server/: logging.py  main.py  web_app.py  worker.py
src/rail_pz_service/server/routers/: algorithm.py  catalog_tag.py  dataset.py  estimator.py  healthz.py  load.py  object_ref.py  request.py  v1.py  wrappers.py
src/rail_pz_service/server/static/css/: output.css
src/rail_pz_service/server/templates/pages/: base.html  catalog_tags.html  datasets.html  estimators.html  load_dataset.html  load_dataset_from_values.html  load_estimator.html  load_model.html  mockup.html  models.html  nested_list.html  standard.html  tree.html
src/rail_pz_service/server/templates/partials/: catalog_tag.html  catalog_tag_tree.html  catalog_tags.html  dataset.html  dataset_tree.html  datasets.html  estimator.html  estimator_nested_list.html  estimator_tree.html  estimators.html  load_dataset.html  load_dataset_from_values.html  load_estimator.html  load_model.html  model.html  models.html  nested_list.html  request_form.html  request_view.html  select_bar.html  show_algorithm.html  show_algorithm_form.html  show_catalog_tag.html  show_catalog_tag_form.html  show_dataset.html  show_dataset_form.html  show_estimator.html  show_estimator_form.html  show_model.html  show_model_form.html
tests/: conftest.py
tests/client/cli/: test_algorithm.py  test_catalog_tag.py  test_dataset.py  test_estimator.py  test_load.py  test_model.py  test_object_ref.py  test_request.py  util_functions.py
tests/db/: test_algorithm.py  test_cache.py  test_catalog_tag.py  test_dataset.py  test_estimator.py  test_model.py  test_object_ref.py  test_request.py  util_functions.py
tests/db/cli/: test_algorithm.py  test_catalog_tag.py  test_dataset.py  test_estimator.py  test_load.py  test_model.py  test_object_ref.py  test_request.py  util_functions.py
tests/save/: test_pz_rail_service.db
tests/save/datasets/com_cam/: com_cam_minimal_gold_test.hdf5
tests/save/models/GPzEstimator/com_cam/: com_cam_gpz_base.pkl
tests/save/qp_files/com_cam_minimal_gold_test/: com_cam_gpz_base
tests/server/routers/: test_algorithm.py  test_catalog_tag.py  test_dataset.py  test_estimator.py  test_load.py  test_model.py  test_object_ref.py  test_request.py  test_trivial.py  util_functions.py
