[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "pz-rail-service-client"
description = "RAIL service to generate photometric redshifts: web server"
license = { file = "LICENSE" }
readme = "README.md"
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.11,<3.13"
dynamic = ["version"]

dependencies = [
    "click==8.1.*",
    "httpx>=0.27.2",
    "numpy==2.1.*",
    "pydantic==2.10.*",
    "pydantic-settings==2.7.*",
    "python-multipart==0.0.*",
    "rich==13.9.*",
    "structlog==24.4.*",
    "tabulate==0.9.*",
]


[project.scripts]
pz-rail-service-client = "rail_pz_service.client.cli.main:top"

[project.urls]
Source = "https://github.com/LSSTDESC/rail_pz_service"

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rail_pz_service"]

[tool.hatch.version]
path = "src/rail_pz_service/client/__init__.py"
fallback-version = "0.0.0"
